--- a/pages/tenants/view(admin).phtml
+++ b/pages/tenants/view(admin).phtml
@@ -102,7 +102,7 @@
         </dl>
         <dl>
             <dt>Integrity</dt>
-            <dd><a href="tenants/check">Check your data integrity</a></dd>
+            <dd><a href="tenants/check">check</a></dd>
         </dl>
     </div></div>
 
